--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ version = "1.0.0"
 edition = "2021"
 license = "Apache-2.0"
 categories = ["data-structures", "database", "mathematics", "science::geo", "visualization"]
-keywords = ["graph", "ecs", "slotmap", "category", "database", "fast", "allocator", "arena", "index", "data-structures", "entity-component-system"]
+keywords = ["graph", "ecs", "slotmap", "category", "database"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
