--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -16,14 +16,14 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         rust: [1.64.0, stable]
-        features: []
+        features: ["hashbrown", "categories"]
     steps:
       - uses: hecrj/setup-rust-action@v2
         with:
           rust-version: ${{ matrix.rust }}
       - uses: actions/checkout@master
       - name: Run tests
-      run: cargo test --verbose
+        run: cargo test --verbose
   build:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -40,9 +40,6 @@ jobs:
         run: |
           cargo build --verbose --no-default-features
           cargo build --verbose --features "${{ matrix.features }}"
-        run: |
-          cargo test --verbose --no-default-features
-          cargo test ${{ matrix.test_all }} --verbose --features "${{ matrix.features }}"
       # - name: Build benchmarks
       #   if: ${{ matrix.bench }}
       #   run: |
