--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -16,14 +16,14 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         rust: [1.64.0, stable]
-        features: ["hashbrown", "categories"]
+        features: ["hashbrown", "categories", "serde", "specta"]
     steps:
       - uses: hecrj/setup-rust-action@v2
         with:
           rust-version: ${{ matrix.rust }}
       - uses: actions/checkout@master
       - name: Run tests
-        run: cargo test --verbose
+      - run: cargo test --verbose
   build:
     runs-on: ${{ matrix.os }}
     strategy:
@@ -31,7 +31,6 @@ jobs:
         os: [ubuntu-latest, windows-latest]
         rust: [1.64.0, stable]
     steps:
-      - name: Tests
       - uses: hecrj/setup-rust-action@v2
         with:
           rust-version: ${{ matrix.rust }}
