--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -23,7 +23,7 @@ jobs:
           rust-version: ${{ matrix.rust }}
       - uses: actions/checkout@master
       - name: Run tests
-      - run: cargo test --verbose
+        run: cargo test --verbose
   build:
     runs-on: ${{ matrix.os }}
     strategy:
