--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         rust: [1.64.0, stable]
-        features: ["hashbrown", "categories", "serde", "specta"]
+        features: ["hashbrown,categories,serde,specta"]
     steps:
       - uses: hecrj/setup-rust-action@v2
         with:
