--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,12 @@ keywords = ["graph", "ecs", "slotmap", "category", "database"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bench]]
+name = "dfs"
+harness = false
+
+
+
 [dependencies]
 # wrapper_derive = { version = "0.1.0", path = "../wrapper_derive" }
 slotmap = { version = "1.0" }
@@ -22,14 +28,22 @@ tauri-specta = { version = "=2.0.0-rc.4", features = ["javascript", "typescript"
 serde = { version = "1.0", features = ["derive"], optional = true}
 serde_json = {version = "1.0", optional = true}
 hashbrown = {version = "0.14.3", optional = true, features=["inline-more", "ahash"]}
+rayon = { version = "1.10.0", optional = true }
+rand = "0.8.5"
 
 [features]
-default = ["hashbrown", "categories"]
+default = ["hashbrown",  "rayon"]
+rayon = ["dep:rayon"]
 serde = ["dep:serde", "dep:serde_json", "slotmap/serde"]
 specta = ["dep:specta", "dep:tauri-specta"]
 hashbrown = ["dep:hashbrown", "hashbrown/serde"]
 categories = []
 std = []
+
+[dev-dependencies]
+criterion = "0.5.1"
+graphlib = "0.6.3"
+petgraph = "0.6.4"
 
 
 
