--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,6 @@ keywords = ["graph", "ecs", "slotmap", "category", "database"]
 slotmap = { version = "1.0" }
 thiserror = "1.0.58"
 specta = { version = "=2.0.0-rc.7", optional = true }
-tauri-specta = { version = "=2.0.0-rc.4", features = ["javascript", "typescript"], optional = true }
 serde = { version = "1.0", features = ["derive"], optional = true}
 serde_json = {version = "1.0", optional = true}
 hashbrown = {version = "0.14.3", optional = true, features=["inline-more", "ahash"]}
@@ -26,7 +25,7 @@ hashbrown = {version = "0.14.3", optional = true, features=["inline-more", "ahas
 [features]
 default = ["hashbrown", "categories"]
 serde = ["dep:serde", "dep:serde_json", "slotmap/serde"]
-specta = ["dep:specta", "dep:tauri-specta"]
+specta = ["dep:specta"]
 hashbrown = ["dep:hashbrown", "hashbrown/serde"]
 categories = []
 std = []
